adds tests to calculator morning